--- a/config/galilel/galilel.conf
+++ b/config/galilel/galilel.conf
@@ -13,9 +13,11 @@ bind=XXX_IPV6_INT_BASE_XXX:XXX_NETWORK_BASE_TAG_XXX::XXX_NUM_XXY:XXX_MNODE_INBOU
 #############################
 # nodes we want to stick to
 #############################
-# addnode=seed1.coinseed.org
-
-
+addnode=94.177.230.68:36001
+addnode=94.16.122.150:36001
+addnode=5.189.148.226:36001
+addnode=86.105.53.115:36001
+addnode=23.81.246.102:36001
 ################################
 # masternode specific settings
 ################################
