--- a/config/galilel/galilel.env
+++ b/config/galilel/galilel.env
@@ -1,4 +1,4 @@
-CODENAME=bitmoney
+CODENAME=galilel
 MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/Galileld}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-36001}
 GIT_URL=https://github.com/Galilel-Project/galilel.git
