--- a/config/mcpc/mcpc.env
+++ b/config/mcpc/mcpc.env
@@ -1,5 +1,5 @@
 CODENAME=mcpc
-MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/mcpcd}
+MNODE_DAEMON=${MNODE_DAEMON:-/usr/local/bin/MCPCoind}
 MNODE_INBOUND_PORT=${MNODE_INBOUND_PORT:-49451}
 GIT_URL=https://github.com/MobilePayCoin/MobilePayCoin.git
 SCVERSION="master"
